src/test/ui/binop/issue-24352.stderr
error[E0369]: cannot subtract `{integer}` from `f64`
  --> $DIR/issue-24352.rs:3:12
   |
LL |     1.0f64 - 1
   |     ------ ^ - {integer}
   |     |
   |     f64

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
