src/test/ui/binop/issue-24352.rs
fn main() {
    1.0f64 - 1.0;
    1.0f64 - 1 //~ ERROR cannot subtract
}
